<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/loadViews"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <EditText
        android:id="@+id/autoCompleteTextViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/search_word"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/empty"
        android:visibility="invisible">

        <requestFocus />
    </EditText>

    <ProgressBar
        android:id="@+id/progressBarMainSearchWord"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/autoCompleteTextViewMain"
        android:layout_alignEnd="@+id/autoCompleteTextViewMain"
        android:layout_alignBottom="@+id/autoCompleteTextViewMain"
        android:layout_marginEnd="10dp"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/listViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoCompleteTextViewMain"
        android:layout_alignParentStart="true"
        android:fastScrollEnabled="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/emptyViewMain"
        style="@style/AppTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoCompleteTextViewMain"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/empty_list_search"
        android:visibility="invisible" />

</RelativeLayout>
